refactor(manager): 重构管理类代码，合并OwnerConfigManager到OwnerManager并新增OptionsQueryManager和EarningsManager
重构管理类代码结构，将OwnerConfigManager的功能合并到OwnerManager中，同时新增OptionsQueryManager和EarningsManager来分别处理期权查询和财报日历相关功能